TOBAGO-828: Make Sheet work with new LayoutManager  - differ between simple content and complex content  - this fixes the missing padding of tc:out inside of a tc:sheet

--- a/tobago-theme/tobago-theme-scarborough/src/main/resources/org/apache/myfaces/tobago/renderkit/html/scarborough/standard/style/style.css
+++ b/tobago-theme/tobago-theme-scarborough/src/main/resources/org/apache/myfaces/tobago/renderkit/html/scarborough/standard/style/style.css
@@ -844,14 +844,17 @@ hr.tobago-separator {
 }
 
 .tobago-sheet-cell {
-  padding-left: 0;
-  padding-right: 0;
+  padding: 2px;
   vertical-align: top;
   overflow: hidden;
 }
 
 .tobago-sheet-cell-markup-clickable {
    cursor: pointer;
+}
+
+.tobago-sheet-cell-markup-pure {
+  padding: 0;
 }
 
 .tobago-sheet-row-markup-odd {
